--- a/next-youtube/styles/Services.module.css
+++ b/next-youtube/styles/Services.module.css
@@ -1,3 +1,67 @@
 .container {
-  
+  padding: 0 100px;
+}
+
+.title {
+  font-size: 30px;
+  border-bottom: 4px solid green;
+  width: max-content;
+}
+
+.subtitle {
+  font-size: 50px;
+   color: rgb(4, 68, 4);
+}
+
+.services {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+.service {
+  width: 500px;
+  height: 500px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  margin-bottom: 50px;
+  background-color: whitesmoke;
+  position: relative;
+}
+
+.media {
+  width: 85%;
+  height: 85%;
+  border-radius: 50%;
+  overflow: hidden;
+  transition: all 1s ease;
+}
+
+.cat {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  color: gray;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-weight: 300;
+}
+.desc {
+  width: 70%;
+  text-align: center;
+  position: absolute;
+  z-index: 999;
+  background-color: rgb(161, 160, 160, 0.5);
+  padding: 20px;
+  border-radius: 10px;
+  opacity: 0;
+  transition: all 1s ease;
+}
+.service:hover .media {
+  transform: scale(1.1);
+}
+
+.service:hover .desc {
+  opacity: 1;
 }
