完成移动端响应式css样式

--- a/next-youtube/styles/Contact.module.css
+++ b/next-youtube/styles/Contact.module.css
@@ -48,3 +48,12 @@
 
 }
 
+@media screen and (max-width: 480px) {
+  .form {
+    width: 99%;
+  }
+
+  .inputS:first-child {
+    margin-right: 0;
+  }
+}
