--- a/next-youtube/styles/Footer.module.css
+++ b/next-youtube/styles/Footer.module.css
@@ -35,3 +35,17 @@
 .cardItem {
   margin-bottom: 20px;
 }
+
+@media screen and (max-width:480px) {
+  .container {
+    height: auto;
+    flex-direction: column;
+  }
+
+  .title, .linkTitle {
+    font-size: 30px;
+  }
+  .cardItem {
+    text-align: center;
+  }
+}
