--- a/next-youtube/styles/Intro.module.css
+++ b/next-youtube/styles/Intro.module.css
@@ -26,12 +26,12 @@
 }
 
 .desc {
-    font-size: 20px;
+  font-size: 20px;
   margin: 0;
 }
 
 .button {
-    border: none;
+  border: none;
   background-color: green;
   color: white;
   font-weight: bold;
@@ -39,4 +39,30 @@
   border-radius: 10px;
   width: 100px;
   cursor: pointer;
+}
+
+@media screen and (max-width: 480px) {
+  .container {
+    flex-direction: column;
+  }
+
+  .card {
+    padding: 50px;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+  }
+
+  .desc {
+    display: none;
+  }
+
+  .title {
+    font-size: 25px;
+  }
+
+  .button {
+    margin-top: 50px;
+  }
+
 }
