--- a/next-youtube/styles/Navbar.module.css
+++ b/next-youtube/styles/Navbar.module.css
@@ -7,6 +7,8 @@
   padding: 0 100px;
   font-size: 18px;
   justify-content: space-between;
+  position: relative;
+  overflow: hidden;
 }
 
 .listItem {
@@ -14,4 +16,58 @@
   margin-right: 30px;
   font-size: 14px;
   color: lightgray;
+}
+
+.hamburger {
+  display: none;
+}
+
+.menu {
+  display: none;
+}
+
+@media screen and (max-width:480px) {
+  .list {
+    display: none;
+  }
+
+  .hamburger {
+    width: 25px;
+    height: 25px;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+  }
+
+  .line {
+    width: 100%;
+    height: 3px;
+    background-color: #fff;
+  }
+
+  .container {
+    padding: 0 20px;
+  }
+
+  .menu {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    position: fixed;
+    width: 50vw;
+    height: calc(100vh - 50px);
+    background-color: black;
+    top: 50px;
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
+    list-style: none;
+    color: whitesmoke;
+    z-index: 999;
+    right: 0;
+    transition: all 1s ease;
+  }
 }
