--- a/next-youtube/styles/Product.module.css
+++ b/next-youtube/styles/Product.module.css
@@ -49,3 +49,39 @@
   margin-top: 50px;
   cursor: pointer;
 }
+
+@media screen and (max-width:480px) {
+  .container {
+    flex-direction: column-reverse;
+  }
+
+  .title {
+    font-size: 40px;
+  }
+
+  .cardS {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .imgContatiner {
+    width: 100%;
+    border-radius: 50%;
+    overflow: hidden;
+    margin: 20px;
+  }
+
+  .button {
+    margin: 20px;
+  }
+
+  .cardL::before {
+    content: 'Project Pics';
+    font-size: 30px;
+    margin: 20px;
+    width: 100%;
+    text-align: center;
+  }
+}
