--- a/next-youtube/styles/Services.module.css
+++ b/next-youtube/styles/Services.module.css
@@ -10,7 +10,7 @@
 
 .subtitle {
   font-size: 50px;
-   color: rgb(4, 68, 4);
+  color: rgb(4, 68, 4);
 }
 
 .services {
@@ -18,6 +18,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
 }
+
 .service {
   width: 500px;
   height: 500px;
@@ -47,6 +48,7 @@
   letter-spacing: 5px;
   font-weight: 300;
 }
+
 .desc {
   width: 70%;
   text-align: center;
@@ -58,6 +60,7 @@
   opacity: 0;
   transition: all 1s ease;
 }
+
 .service:hover .media {
   transform: scale(1.1);
 }
@@ -70,4 +73,27 @@
   left: 0;
   right: 0;
   margin: auto;
+}
+
+@media screen and (max-width:480px) {
+  .container {
+    padding: 20px;
+  }
+
+  .services {
+    justify-content: center;
+  }
+
+  .title {
+    font-size: 25px;
+  }
+
+  .subtitle {
+    font-size: 35px;
+  }
+
+  .service {
+    width: 300px;
+    height: 300px;
+  }
 }
