--- a/next-youtube/styles/Testimonials.module.css
+++ b/next-youtube/styles/Testimonials.module.css
@@ -27,7 +27,7 @@
 }
 
 .comment {
-    font-size: 20px;
+  font-size: 20px;
   font-weight: 300;
 }
 
@@ -53,4 +53,26 @@
 
 .jobTitle {
   font-size: 14px;
+}
+
+@media screen and (max-width:480px) {
+  .container {
+    padding-bottom: 50px;
+    height: auto;
+    margin: 20px;
+  }
+
+  .title {
+    font-size: 50px;
+  }
+
+  .card {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 50px;
+    text-align: center;
+  }
 }
